// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignore file when using --debug-check 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
other-regular-modules.js

=================================== (write) ====================================
[]
`;

exports[`ignore path 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
regular-module.js

=================================== (write) ====================================
[]
`;

exports[`outputs files as-is if no --write 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
'use strict';

=================================== (write) ====================================
[]
`;

exports[`support .prettierignore 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
other-regular-modules.js

=================================== (write) ====================================
[]
`;
